[package]
name = "charjpoet"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/phodal/charjpoet"
documentation = "https://github.com/phodal/charjpoet"
homepage = "https://github.com/phodal/charjpoet"
description = """
Charj Poet is a API for write to `.cj` language.
"""
categories = ["text-processing", "command-line-interface", "development-tools", "parser-implementations", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0"
